# ExamModule

./: .gitignore  README.md  openapi.json
backend/: pyproject.toml  requirements.txt  seed.py
backend/app/: auth_utils.py  crud.py  database.py  main.py  models.py  requirements.txt  schemas.py
backend/app/routers/: auth.py  exam.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/Services/: api.js
frontend/src/features/auth/: Login.jsx  Register.jsx
frontend/src/features/dashboard/: Dashboard.jsx
frontend/src/features/exam/: ExamPage.jsx  Timer.jsx
frontend/src/store/: store.js
frontend/src/store/slices/: authSlice.js
